--- a/index.html
+++ b/index.html
@@ -232,27 +232,26 @@
 			</div>
 			<div class="small-tree-name">왕벚나무</div>
 		</div>
-			<div class="main">
-				<div class=main-container>
-					<div class="info-container">
-						<div class="info-style mainitems district-info" >영등포구</div>
-						<div class="info-style time-container">
-							<div class="time">
-								<div id="yearInfo"  class="mainitems">2006년</div>
-								<div id="monthInfo" class="mainitems">1월</div>
-							</div>
-							<span id="playPause" class="material-icons-outlined md-32 time-items" >pause</span>
-							<span id="update" class="material-icons-outlined md-32 time-items" >skip_previous</span>
-						</div>
-					</div>
+		<div class="info-container">
+			<div class="info-style mainitems district-info" >영등포구</div>
+			<div class="info-style time-container">
+				<div class="time">
+					<div id="yearInfo"  class="mainitems">2006년</div>
+					<div id="monthInfo" class="mainitems">1월</div>
 				</div>
+				<span id="playPause" class="material-icons-outlined md-32 time-items" >pause</span>
+				<span id="update" class="material-icons-outlined md-32 time-items" >skip_previous</span>
 			</div>
 		</div>
 	</div>
 
 
+	<div class="info-bubble">
+		<div class="big-tree-name">은행나무</div>
+		<div class="big-tree-number">nnnn그루</div>
+	</div>
 
-	<div class="svg-container hidden" id="tree1-container">
+	<div class="tree-container hidden" id="tree1-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree01" data-name="은행나무">
@@ -260,7 +259,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree2-container">
+	<div class="tree-container hidden" id="tree2-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree02" data-name="양버즘나무">
@@ -268,7 +267,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree3-container">
+	<div class="tree-container hidden" id="tree3-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree03" data-name="느티나무">
@@ -276,7 +275,7 @@
 		</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree4-container">
+	<div class="tree-container hidden" id="tree4-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree04" data-name="왕벚나무">
@@ -284,7 +283,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree5-container">
+	<div class="tree-container hidden" id="tree5-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs><style></style></defs>
 			<g class="treeAll tree05" data-name="은단풍나무">
@@ -292,7 +291,7 @@
 			<path vector-effect="non-scaling-stroke" class="tree05-outside" d="M395,200,269,171.43l25.24-65.6L228.59,131,200,5.13,171.41,131l-65.67-25.21L131,171.43,5,200l126,28.57-25.24,65.6L171.41,269,200,394.87,228.59,269l65.67,25.21L269,228.57ZM271.7,271.63l-49.95-19.17L200,348.23l-21.75-95.77L128.3,271.63l19.2-49.9L51.67,200l95.83-21.73-19.2-49.9,49.95,19.17L200,51.77l21.75,95.77,49.95-19.17-19.2,49.9L348.33,200,252.5,221.73Z"/></g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree6-container">
+	<div class="tree-container hidden" id="tree6-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs><style></style></defs>
 			<g class="treeAll tree06" data-name="메타세콰이어">
@@ -303,7 +302,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree7-container">
+	<div class="tree-container hidden" id="tree7-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" >
 			<defs></defs>
 			<g class="treeAll tree07" data-name="회화나무">
@@ -311,7 +310,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree8-container">
+	<div class="tree-container hidden" id="tree8-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree08" data-name="가죽나무">
@@ -319,7 +318,7 @@
 		</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree9-container">
+	<div class="tree-container hidden" id="tree9-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree09" data-name="감나무">
@@ -329,7 +328,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree10-container">
+	<div class="tree-container hidden" id="tree10-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree10" data-name="수양버들">
@@ -338,7 +337,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree11-container">
+	<div class="tree-container hidden" id="tree11-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs><style>
 			.tree11-color1{fill:#ff3;}
@@ -352,7 +351,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree12-container">
+	<div class="tree-container hidden" id="tree12-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree12" data-name="칠엽수">
@@ -360,7 +359,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree13-container">
+	<div class="tree-container hidden" id="tree13-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree13" data-name="포플러">
@@ -374,7 +373,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree14-container">
+	<div class="tree-container hidden" id="tree14-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs><style></style></defs>
 			<g class="treeAll tree14" data-name="느릅나무">
@@ -382,7 +381,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree15-container">
+	<div class="tree-container hidden" id="tree15-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree15" data-name="살구나무">
@@ -391,7 +390,7 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree16-container">
+	<div class="tree-container hidden" id="tree16-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
 			<g class="treeAll tree16" data-name="무궁화">
@@ -414,28 +413,28 @@
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree17-container">
+	<div class="tree-container hidden" id="tree17-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 		<defs></defs>
-		<g class="treeAll tree18" data-name="소나무">
+		<g class="treeAll tree17" data-name="소나무">
 			<path vector-effect="non-scaling-stroke" d="M74.12,394.5c-8.37-62.88-6.75-124.87,4.68-179.27,11.66-55.46,33.66-103.65,63.63-139.38,30.86-36.79,69.5-60.44,114.84-70.3,4,4.42,8,9.09,11.84,13.9-45.21,7.61-83.71,30-114.44,66.67-28.24,33.67-48.33,77-59.7,128.93a.5.5,0,0,0,.35.58.32.32,0,0,0,.14,0,.51.51,0,0,0,.47-.32c12.82-33.1,30.91-62.2,53.76-86.49C188.13,88,238.13,63,294.29,56.63c2.84,5,5.54,10.13,8.06,15.26-55,4.77-103.72,28.24-141,67.89-24.06,25.58-42.44,56.54-54.62,92a.49.49,0,0,0,.47.66.52.52,0,0,0,.45-.26,234.48,234.48,0,0,1,52.61-66.56C199.89,131,250,111.91,301.4,111.91c5.68,0,11.43.23,17.11.69,1.62,5.24,3.14,10.78,4.53,16.48a199.87,199.87,0,0,0-21.57-1.18c-47.57,0-94,17.68-130.72,49.78a220,220,0,0,0-54.22,72.43.51.51,0,0,0,.2.65.57.57,0,0,0,.25.06.48.48,0,0,0,.41-.21,196.65,196.65,0,0,1,56.83-55c29.2-18.47,62.11-28.23,95.16-28.23a164.14,164.14,0,0,1,61.22,11.74c.37,6.12.55,11.87.55,17.55v0a147.68,147.68,0,0,0-61.73-13.34c-30.06,0-60,8.9-86.66,25.74A180.9,180.9,0,0,0,124,269.62a.51.51,0,0,0,.13.66.57.57,0,0,0,.3.1.5.5,0,0,0,.37-.17,143,143,0,0,1,44.51-33.15,157.43,157.43,0,0,1,67.56-14.94c5.08,0,10.23.24,15.33.7,27.08,2.44,53.34,11.45,73.94,25.35l.32.22c-1,5.58-2.25,11.23-3.63,16.82l-5.63-3.8c-22.13-14.94-50.54-23.16-80-23.16-21.82,0-42.91,4.57-61,13.22-33.34,16-74.64,53.22-82,140.25l-.24,2.78Z"/>
 		</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree18-container">
+	<div class="tree-container hidden" id="tree18-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
-			<g class="treeAll tree19" data-name="목련">
-			<path vector-effect="non-scaling-stroke" class="tree19-color1" d="M136.34,301c-9.23-19.66-15.63-44.18-19-73-1-9.43-2.08-18.66-3.12-27.58-4-34.23-7.47-63.81-4.67-88.58A122.12,122.12,0,0,1,121.07,72c5.25-10.52,11-17.65,15.75-19.57a10.66,10.66,0,0,1,2.74-.71,9.77,9.77,0,0,1,1.08-.06c4.12,0,8.34,2.76,14.23,7.53,3.73,3.16,7.56,6.67,11.37,10.44-18,38.29-27,73.43-27.74,107.4-.29,14.28-1.41,29.38-2.49,44C133.78,251.05,131.67,279.59,136.34,301Z"/>
-			<path vector-effect="non-scaling-stroke" class="tree19-color1" d="M162.37,343.64a.52.52,0,0,1-.32-.11c-10.17-8.45-17.9-19.54-23-32.95-.55-1.48-1.08-3.13-1.61-5-6.12-21.77-3.86-52.28-1.47-84.59,1.08-14.6,2.2-29.7,2.49-44,.7-34.07,9.83-69.3,27.89-107.72,2.2-4.68,4.54-9.42,7-14.12,8.14-16,15.08-28.4,20.62-36.9C200.36,8.93,205.14,4.5,215.05,4.5c7.68,0,20.48,4.22,31.78,13.63,10.63,8.64,19.1,21.11,25.16,37.07,10.75,29.62,14.54,69,18.93,114.61l.68,7.13c3.2,32.79-2.26,66.71-16.21,100.81a.5.5,0,0,1-.39.3h-.08a.51.51,0,0,1-.38-.18c-.86-1-2.39-1.56-4.56-1.56-8.83,0-28,8.91-49.28,28.49-9.26,7.13-21.11,13.26-31.55,18.67-6.41,3.32-12.46,6.46-17.06,9.38-4.71,2.61-7.81,6.11-9.25,10.44a.46.46,0,0,1-.33.32A.34.34,0,0,1,162.37,343.64Z"/>
-			<path vector-effect="non-scaling-stroke" class="tree19-color2" d="M199.51,395.5c-20.21,0-31-18.79-36.47-34.56-2.41-6.94-2.8-13-1.15-17.95,1.53-4.58,4.78-8.27,9.69-11,4.61-2.94,10.68-6.08,17.11-9.41,10.41-5.4,22.21-11.51,31.36-18.55C241.48,284.32,261,275.32,270,275.32c2.48,0,4.28.64,5.33,1.92a4.31,4.31,0,0,1,.84,1.65c2.91,10.87-9.3,38.83-21.69,61.37C241.88,363.13,225,388,215.54,391.94a41.73,41.73,0,0,1-16,3.56Z"/>
+			<g class="treeAll tree18" data-name="목련">
+			<path vector-effect="non-scaling-stroke" class="tree18-color1" d="M136.34,301c-9.23-19.66-15.63-44.18-19-73-1-9.43-2.08-18.66-3.12-27.58-4-34.23-7.47-63.81-4.67-88.58A122.12,122.12,0,0,1,121.07,72c5.25-10.52,11-17.65,15.75-19.57a10.66,10.66,0,0,1,2.74-.71,9.77,9.77,0,0,1,1.08-.06c4.12,0,8.34,2.76,14.23,7.53,3.73,3.16,7.56,6.67,11.37,10.44-18,38.29-27,73.43-27.74,107.4-.29,14.28-1.41,29.38-2.49,44C133.78,251.05,131.67,279.59,136.34,301Z"/>
+			<path vector-effect="non-scaling-stroke" class="tree18-color1" d="M162.37,343.64a.52.52,0,0,1-.32-.11c-10.17-8.45-17.9-19.54-23-32.95-.55-1.48-1.08-3.13-1.61-5-6.12-21.77-3.86-52.28-1.47-84.59,1.08-14.6,2.2-29.7,2.49-44,.7-34.07,9.83-69.3,27.89-107.72,2.2-4.68,4.54-9.42,7-14.12,8.14-16,15.08-28.4,20.62-36.9C200.36,8.93,205.14,4.5,215.05,4.5c7.68,0,20.48,4.22,31.78,13.63,10.63,8.64,19.1,21.11,25.16,37.07,10.75,29.62,14.54,69,18.93,114.61l.68,7.13c3.2,32.79-2.26,66.71-16.21,100.81a.5.5,0,0,1-.39.3h-.08a.51.51,0,0,1-.38-.18c-.86-1-2.39-1.56-4.56-1.56-8.83,0-28,8.91-49.28,28.49-9.26,7.13-21.11,13.26-31.55,18.67-6.41,3.32-12.46,6.46-17.06,9.38-4.71,2.61-7.81,6.11-9.25,10.44a.46.46,0,0,1-.33.32A.34.34,0,0,1,162.37,343.64Z"/>
+			<path vector-effect="non-scaling-stroke" class="tree18-color2" d="M199.51,395.5c-20.21,0-31-18.79-36.47-34.56-2.41-6.94-2.8-13-1.15-17.95,1.53-4.58,4.78-8.27,9.69-11,4.61-2.94,10.68-6.08,17.11-9.41,10.41-5.4,22.21-11.51,31.36-18.55C241.48,284.32,261,275.32,270,275.32c2.48,0,4.28.64,5.33,1.92a4.31,4.31,0,0,1,.84,1.65c2.91,10.87-9.3,38.83-21.69,61.37C241.88,363.13,225,388,215.54,391.94a41.73,41.73,0,0,1-16,3.56Z"/>
 			</g>
 		</svg>
 	</div>
-	<div class="svg-container hidden" id="tree19-container">
+	<div class="tree-container hidden" id="tree19-container">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
 			<defs></defs>
-			<g class="treeAll tree20" data-name="이팝나무">
+			<g class="treeAll tree19" data-name="이팝나무">
 			<path vector-effect="non-scaling-stroke" d="M200,296.08c-.64,0-1.28,0-1.93,0A38.67,38.67,0,0,1,162,250.46a3.89,3.89,0,0,0-.69-3.09,3.76,3.76,0,0,0-2.68-1.45h-.1l-.35,0a3.85,3.85,0,0,0-3.78,3.36,38.76,38.76,0,0,1-38.31,33.48c-1,0-2,0-3-.12A38.65,38.65,0,0,1,79.12,232.7,4.9,4.9,0,0,0,71,227.78,38.65,38.65,0,0,1,5.58,197.49a39,39,0,0,1,37.11-36.12l1.46,0A38.46,38.46,0,0,1,71,172.22a4.84,4.84,0,0,0,3.38,1.38,4.74,4.74,0,0,0,2-.45,4.91,4.91,0,0,0,2.69-5.85A38.65,38.65,0,0,1,113,117.39c1-.08,2-.12,3-.12a38.77,38.77,0,0,1,38.31,33.48,3.85,3.85,0,0,0,3.78,3.36l.35,0a3.9,3.9,0,0,0,2.8-1.51,3.68,3.68,0,0,0,.7-2.91,38.64,38.64,0,0,1,38-45.75c.66,0,1.32,0,2,0a38.67,38.67,0,0,1,36,45.57,3.89,3.89,0,0,0,.69,3.09,3.72,3.72,0,0,0,2.68,1.45l.36,0a4,4,0,0,0,3.89-3.44,38.77,38.77,0,0,1,38.29-33.39c1,0,2,0,3,.12a38.65,38.65,0,0,1,33.91,49.91,4.89,4.89,0,0,0,2.62,5.82,4.82,4.82,0,0,0,2.09.48,4.87,4.87,0,0,0,3.4-1.38,38.42,38.42,0,0,1,26.86-10.87l1.46,0a39,39,0,0,1,37.11,36.11A38.64,38.64,0,0,1,329,227.78a4.87,4.87,0,0,0-3.4-1.38,4.72,4.72,0,0,0-2,.45,4.9,4.9,0,0,0-2.69,5.85A38.65,38.65,0,0,1,287,282.61c-1,.08-2,.12-3,.12a38.77,38.77,0,0,1-38.31-33.48,3.85,3.85,0,0,0-3.78-3.36l-.35,0a3.92,3.92,0,0,0-2.81,1.52,3.68,3.68,0,0,0-.69,2.9,38.64,38.64,0,0,1-38,45.75Z"/>
 			</g>
 		</svg>
@@ -474,10 +473,10 @@
 
 
 
-	<script src="treeInfo.js"></script>
 	<script src="districtSelect.js"></script>
 	<script src="sketch.js"></script>
 	<script src="counter.js"></script>
+	<script src="treeInfo.js"></script>
 
 </body>
 
