--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
 	</script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SeoulTrees</title>
 </head>
 
 <body>
+	<div class="start-title">
+		<img src="./icon/seoultrees_title2.svg" alt="" srcset=""></img>
+		<div class="my-info">Created by 2MULBUL</div>
+	</div>
+	
 	<div class="page-container">
 		<img class="logo-style" id="logo-icon" src="treeSvg/왕벚나무.svg"></img>
 		<div class="sum-container">
@@ -249,7 +257,6 @@
 
 	</div>
 
-
 	<div class="info-bubble">
 		<div class="bubble-common-style big-tree-name">은행나무</div>
 		<div class="bubble-common-style big-tree-number">nnnn그루</div>
@@ -446,6 +453,7 @@
 
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="introTitle.js"></script>
 	<script src="projectInfo.js"></script>
 	<script src="districtSelect.js"></script>
 	<script src="sketch.js"></script>
