--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="ko">
 
 <head>
+	<link rel="shortcut icon" href="./icon/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -21,11 +27,6 @@
 			h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
 		})(document);
 	</script>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SeoulTrees</title>
@@ -35,6 +36,12 @@
 	<div class="start-title">
 		<img src="./icon/seoultrees_title2.svg" alt="" srcset=""></img>
 		<div class="my-info">Created by 2MULBUL</div>
+	</div>
+	<div class="right-reserved">
+		<a href="https://www.instagram.com/2mulbul/" target="_blank" rel="noopener noreferrer">
+			Designed and Developed by 2MULBUL
+			<span class="rocket-icon">🚀</span>
+		</a>
 	</div>
 	
 	<div class="page-container">
