--- a/index.html
+++ b/index.html
@@ -194,14 +194,16 @@
 							<img src="./icon/arrow_back1.svg" class="back-icon back-button" alt="" srcset="">
 							<div class="bubble-common-style back-info">돌아갈까요?</div>
 						</div>
+						<div class="bubble-common-style link-info">데이터 보기</div>
+
 						<div class="part-wrapper">
 							<div class="explain-container" id="about">
 								<h class="heading" id="about-heading">프로젝트 소개</h>
-								<p class="body" id="about-body"><strong>서울트리즈</strong>는 서울시와 각 자치구의 가로수 현황을 시간의 흐름에 따라 시각적으로 표현하는 프로젝트입니다. 봄의 벚꽃, 여름의 메타세콰이어, 가을의 감나무, 겨울의 목련. 언뜻 스쳐지나가며 보는 가로수는 비슷해 보이지만 해마다 도시환경에 따라, 유행에 따라 달라진다는 것을 아시나요? 서울트리즈가 담은 도시와 자연의 변화를 천천히 둘러보세요.</p>
+								<p class="body" id="about-body"><strong>서울트리즈</strong>는 서울시와 각 자치구의 가로수 현황을 연도별 시간의 흐름에 따라 시각적으로 표현하는 프로젝트입니다. 봄의 만개한 벚나무, 여름의 시원한 메타세콰이어, 가을의 휘어진 감나무, 겨울의 움트는 목련. 담숭담숭하게 서 있는 가로수들이 우리의 매일을 가득 채우기 위해 해마다 조용히 변화하고 있다는 것을 아시나요? 서울트리즈가 담은 도시와 자연의 변화를 천천히 둘러보세요.</p>
 							</div>
 							<div class="explain-container" id="datasource">
 								<h class="heading" id="datasource-heading">데이터 출처</h>
-								<p class="body" id="datasource-body"><strong>서울트리즈</strong>는 <strong>‘서울시 가로수 현황 통계’(2006~2019)</strong>와 ‘<strong>우리나라 기후 평년값’ 중 서울시 평균기온(1991~2020)</strong>의 데이터에 근거합니다. 각각 서울 열린 데이터 광장과 기후개방포털에서 더 자세한 정보를 확인하실 수 있습니다.</p>
+								<p class="body" id="datasource-body"><strong>서울트리즈</strong>는 <strong><a href="https://data.seoul.go.kr/dataList/367/S/2/datasetView.do" target="_blank" rel="noopener noreferrer">‘서울시 가로수 현황 통계’</a>(2006~2019)</strong>와 <strong><a href="https://data.kma.go.kr/climate/average30Years/selectAverage30YearsKoreaFileset.do?pgmNo=716" target="_blank" rel="noopener noreferrer">‘우리나라 기후 평년값’</a> 중 서울시 평균기온(1991~2020)</strong>의 데이터에 근거합니다. 각각 서울 열린 데이터 광장과 기상자료개방포털에서 더 자세한 정보를 확인하실 수 있습니다.</p>
 							</div>
 						</div>
 						<div class="part-wrapper">
@@ -219,7 +221,7 @@
 										<div class="detail-image-container">
 											<img class="info-image" src="infoImage/수량.png" alt=""></img>
 										</div>
-										<p class="detail-text"><strong>둥둥이의 크기</strong>는 가로수의 수량을 보여줍니다.</p>
+										<p class="detail-text"><strong>둥둥이의 크기</strong>는 가로수의 수량에 비례합니다.</p>
 									</div>
 								</div>
 								<div class="how-detail-container">
